# EucherGameEngine

./: CMakeLists.txt  PROPOSAL.md  README.md
apps/: cinder_app_main.cc
include/core/: card.h  card_play_action.h  deck.h  euchre_exception.h  game.h  game_state.h  round.h  trick.h
include/players/: computer_player.h  human_player.h  player.h  strategy.h
include/visualizer/: euchre_app.h
src/core/: card.cc  deck.cc  euchre_exception.cc  game.cc  round.cc  trick.cc
src/players/: computer_random_strategy.cc  human_player.cc  player.cc
src/visualizer/: eucher_app.cc
test/: card_tests.cc  deck_tests.cc  game_tests.cc  test_main.cc  trick_tests.cc
